	(erc-make-mode-line-buffer-name): Add help-echo and mouse-face
	properties to channel name.

2006-08-20  Michael Olson  <mwolson@gnu.org>

	* erc.el (erc-with-server-buffer): New macro that switches to the
	current ERC server buffer and runs some code.  If no server buffer
	is available, return nil.  This is a useful way to access
	variables in the server buffer.

2006-08-14  Diane Murray  <disumu@x3y2z1.net>

	* erc-menu.el: Updated copyright years.  Removed EmacsWiki URL.
	(erc-menu-definition): Name the menu "ERC" instead of "IRC" to
	avoid confusion with rcirc and other clients.

	* erc-backend.el (erc-server-banned): New variable.
	(erc-server-connect): Set `erc-server-banned' to nil.
	(erc-process-sentinel-1): Use `erc-server-reconnect-p'.
	(erc-server-reconnect-p): New function.  Return non-nil if the
	user wants automatic reconnects and if the user has not been
	banned from the server.  This should fix a bug where ERC gets into
	a loop trying to reconnect with no way to stop it when the user is
	denied access to the server due to a server ban.  It might also
	help when Tor users are blocked from freenode if freenode servers
	send the 465 message before disconnecting.
	(465): Handle "banned from server" error notices.

2006-08-13  Romain Francoise  <romain@orebokech.com>

	* erc-match.el (erc-log-matches-make-buffer): End `y-or-n-p'
	prompt with a space.

2006-08-11  Michael Olson  <mwolson@gnu.org>

	* erc-fill.el (erc-fill): Skip any initial empty lines so that we
	avoid errors when inserting disconnect messages and other messages
	that begin with newlines.

2006-08-07  Michael Olson  <mwolson@gnu.org>

	* erc-backend.el (erc-process-sentinel-1): Use erc-display-message
	in several places instead of inserting text.
	(erc-process-sentinel): Move to the input-marker before removing
	the prompt.

	* erc.el (erc-port): Fix customization options.
	(erc-display-message): Handle null type explicitly.  Previously,